--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="This is the portfolio Website of mine. Made with ReactJS and love. Template by Shubham Srivastava">
-    <meta name="author" content="Shubham Srivastava, The University of Sydney">
+    <meta name="description" content=" This is my portfolio website. Made with ReactJS and love. Template by Shubham Srivastava">
+    <meta name="author" content=" Shubham Srivastava, The University of Sydney">
     <meta name="keywords" content="HTML, CSS, Javascript, ReactJS, NodeJS, SEO, Coding, Portfolio, Resume, Website, Profile, Github, Linkedin, Design, Interactive, CV, Skills">
     <meta name="robots" content= "index, follow">
     <meta name="og:title" content="Portfolio Template">
